--- a/Contact.html
+++ b/Contact.html
@@ -89,6 +89,7 @@
               </div>
             </div>
             <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
+            <a class="btn btn-outline-primary" href="index.html" role="button">Back</a>
           </form>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     </body>
