Added containers and margins

--- a/Home_info.html
+++ b/Home_info.html
@@ -18,6 +18,7 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
+      <div class="container">
         <h1>Austin Animal Center Foster Care Application</h1>
         <h2>Your Home</h2>
         <form>
@@ -69,6 +70,7 @@
             <a class="btn btn-primary" href="#" role="button">Next</a>
             <a class="btn btn-outline-primary" href="Contact.html" role="button">Back</a>
           </form>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     </body>
 </html>
