--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <h1>Austin Animal Center Foster Care Application</h1>
-        <a class="btn btn-primary" href="Contact.html" role="button">Start application</a>
+        <div class="container">
+            <h1>Austin Animal Center Foster Care Application</h1>
+            <a class="btn btn-primary" href="Contact.html" role="button">Start application</a>    
+        </div>
     </body>
 </html>
