Styling changes with css and headers

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="col-md-8">
                     <h2>Apply to become a foster care provider</h2>
                     <p>We’re so happy you’re interested in fostering for the Austin Animal Center! Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
-                    <h3>Types of animals needing foster:</h3>
+                    <h3>Types of animals needing foster</h3>
                     <ul>
                         <li>Medium to large dogs</li>
                         <li>Neonatal kittens or puppies</li>
@@ -32,14 +32,14 @@
                         <li>Dogs and cats with special behavioral needs</li>
                         <li>Dogs and cats recovering from an illness, injury or surgery</li>
                     </ul>
-                    <h3>The foster process:</h3>
+                    <h3>The foster process</h3>
                     <ul>
                         <li>(add later)</li>
                     </ul>
                     <a class="btn btn-primary" href="Contact.html" role="button">Start application</a>    
                 </div>
                 <div class="col-md-4">
-                    <h3>Contact</h3>
+                    <h2>Contact</h2>
                     <h4>Foster Care Coordinators</h4>
                     <h5>Email</h5>
                     <a href="mailto:animal.foster@austintexas.gov">animal.foster@austintexas.gov</a>
