--- a/Contact.html
+++ b/Contact.html
@@ -20,65 +20,64 @@
         <!-- Add your site or application content here -->
       <div class="container">  
         <h1>Austin Animal Center Foster Care Application</h1>
-        <h2>Your Contact Information</h2>
+        <h2>Tell us how to contact you</h2>
         <form>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputFullName">Full Name</label>
-                <input type="text" class="form-control" id="inputFullName" placeholder=" ">
+              <div class="form-group col-md-7">
+                <label for="inputFirstName">First Name</label>
+                <input type="text" class="form-control" id="inputFirstName" placeholder=" ">
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputBirthdate">Birthdate</label>
-                <small id="dateHelpBlock" class="form-text text-muted">
-                    mm/dd/yyyy
-                </small> 
-                <input type="text" class="form-control" id="inputBirthdate" placeholder="mm/dd/yyyy" aria-describedby="dateHelpBlock">
+                <div class="form-group col-md-7">
+                  <label for="inputLastName">Last Name</label>
+                  <input type="text" class="form-control" id="inputLastName" placeholder=" ">
+                </div>
               </div>
-            </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-7">
                 <label for="inputEmail4">Email Address</label>
                 <input type="email" class="form-control" id="inputEmail4" placeholder="">
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputAddress">Address 1</label>
+                <div class="form-group col-md-4">
+                  <label for="inputPhone">Phone Number</label>
+                  <small id="phoneHelpBlock" class="form-text text-muted">
+                      Enter a 10 digit phone number
+                  </small>
+                  <input type="text" class="form-control" id="inputPhone" placeholder="_ _ _ - _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
+                </div>
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-7">
+                <label for="inputAddress">Street address 1</label>
                 <input type="text" class="form-control" id="inputAddress" placeholder="">
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputAddress2">Address 2</label>
+              <div class="form-group col-md-7">
+                <label for="inputAddress2">Street address 2</label>
                 <input type="text" class="form-control" id="inputAddress2" placeholder="">
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
+              <div class="form-group col-md-7">
                 <label for="inputCity">City</label>
                 <input type="text" class="form-control" id="inputCity">
               </div>
-              <div class="form-group col-md-4">
+            </div>
+            <div class="form-row">
+              <div class="form-group col-md-7">
                 <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
-                  <option selected>Choose...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="form-group col-md-2">
-                <label for="inputZip">Zipcode</label>
-                <input type="text" class="form-control" id="inputZip">
+                <input type="text" class="form-control" id="inputState">
+                <!-- When the user starts typing the state, a box should pop up with the states that match that they can choose from, regardless of if they type the full state or the abbreviation -->
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputPhone">Phone Number</label>
-                <small id="phoneHelpBlock" class="form-text text-muted">
-                    Enter a 10 digit phone number
-                </small>
-                <input type="text" class="form-control" id="inputPhone" placeholder="(_ _ _) _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
+              <div class="form-group col-md-2">
+                <label for="inputZip">Zipcode</label>
+                <input type="text" class="form-control" id="inputZip">
               </div>
             </div>
             <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
