--- a/Contact.html
+++ b/Contact.html
@@ -1,90 +1,69 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Foster form prototype</title>
-        <meta name="description" content="Design, technology, and innovation fellowship project to redesign the Austin Animal Center Foster Application">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+---
+layout: default
+---
 
-        <!-- Place favicon.ico in the root directory -->
-
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <!--[if lte IE 9]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-      <div class="container">  
-        <h1>Austin Animal Center Foster Care Application</h1>
-        <h2>Your Contact Information</h2>
-        <form>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputFullName">Full Name</label>
-                <input type="text" class="form-control" id="inputFullName" placeholder=" ">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputBirthdate">Birthdate</label>
-                <small id="dateHelpBlock" class="form-text text-muted">
-                    mm/dd/yyyy
-                </small> 
-                <input type="text" class="form-control" id="inputBirthdate" placeholder="mm/dd/yyyy" aria-describedby="dateHelpBlock">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputEmail4">Email Address</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputAddress">Address 1</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputCity">City</label>
-                <input type="text" class="form-control" id="inputCity">
-              </div>
-              <div class="form-group col-md-4">
-                <label for="inputState">State</label>
-                <select id="inputState" class="form-control">
-                  <option selected>Choose...</option>
-                  <option>...</option>
-                </select>
-              </div>
-              <div class="form-group col-md-2">
-                <label for="inputZip">Zipcode</label>
-                <input type="text" class="form-control" id="inputZip">
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <label for="inputPhone">Phone Number</label>
-                <small id="phoneHelpBlock" class="form-text text-muted">
-                    Enter a 10 digit phone number
-                </small>
-                <input type="text" class="form-control" id="inputPhone" placeholder="(_ _ _) _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
-              </div>
-            </div>
-            <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
-            <a class="btn btn-outline-primary" href="index.html" role="button">Back</a>
-          </form>
-      </div>  
-          <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    </body>
-</html>
+<h1>Austin Animal Center Foster Care Application</h1>
+<h2>Your Contact Information</h2>
+<form>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputFullName">Full Name</label>
+        <input type="text" class="form-control" id="inputFullName" placeholder=" ">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputBirthdate">Birthdate</label>
+        <small id="dateHelpBlock" class="form-text text-muted">
+            mm/dd/yyyy
+        </small>
+        <input type="text" class="form-control" id="inputBirthdate" placeholder="mm/dd/yyyy" aria-describedby="dateHelpBlock">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputEmail4">Email Address</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputAddress">Address 1</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputAddress2">Address 2</label>
+        <input type="text" class="form-control" id="inputAddress2" placeholder="">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputCity">City</label>
+        <input type="text" class="form-control" id="inputCity">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="inputState">State</label>
+        <select id="inputState" class="form-control">
+          <option selected>Choose...</option>
+          <option>...</option>
+        </select>
+      </div>
+      <div class="form-group col-md-2">
+        <label for="inputZip">Zipcode</label>
+        <input type="text" class="form-control" id="inputZip">
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="inputPhone">Phone Number</label>
+        <small id="phoneHelpBlock" class="form-text text-muted">
+            Enter a 10 digit phone number
+        </small>
+        <input type="text" class="form-control" id="inputPhone" placeholder="(_ _ _) _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
+      </div>
+    </div>
+    <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
+    <a class="btn btn-outline-primary" href="index.html" role="button">Back</a>
+  </form>
