add contact sidebar

--- a/index.html
+++ b/index.html
@@ -1,27 +1,19 @@
 ---
-layout: default
+layout: contact_sidebar
 ---
 
-<h1>Austin Animal Center Foster Care Application</h1>
-<div class="row">
-    <div class="col-md-8">
-        <h2>Apply to become a foster care provider</h2>
-        <p>We’re so happy you’re interested in fostering for the Austin Animal Center! Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
-        <h3>Types of animals needing foster</h3>
-        <ul>
-            <li>Medium to large dogs</li>
-            <li>Neonatal kittens or puppies</li>
-            <li>Senior dogs and cats</li>
-            <li>Dogs and cats with special behavioral needs</li>
-            <li>Dogs and cats recovering from an illness, injury or surgery</li>
-        </ul>
-        <h3>The foster process</h3>
-        <ul>
-            <li>(add later)</li>
-        </ul>
-        <a class="btn btn-primary" href="Contact.html" role="button">Start application</a>
-    </div>
-    <div class="col-md-4">
-      {% include contact.html %}
-    </div>
-</div>
+<h2>Apply to become a foster care provider</h2>
+<p>We’re so happy you’re interested in fostering for the Austin Animal Center! Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
+<h3>Types of animals needing foster</h3>
+<ul>
+    <li>Medium to large dogs</li>
+    <li>Neonatal kittens or puppies</li>
+    <li>Senior dogs and cats</li>
+    <li>Dogs and cats with special behavioral needs</li>
+    <li>Dogs and cats recovering from an illness, injury or surgery</li>
+</ul>
+<h3>The foster process</h3>
+<ul>
+    <li>(add later)</li>
+</ul>
+<a class="btn btn-primary" href="Contact.html" role="button">Start application</a>
