update pages to use contact sidebar

--- a/Home_info.html
+++ b/Home_info.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: contact_sidebar
 ---
 
-<h1>Austin Animal Center Foster Care Application</h1>
 <h2>Your Home</h2>
 <form>
     <div>
