--- a/Contact.html
+++ b/Contact.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: contact_sidebar
 ---
 
-<h1>Austin Animal Center Foster Care Application</h1>
 <h2>Tell us how to contact you</h2>
 <form>
   <div class="form-row">
