Updated css, file names, button destinations
Added top margins to h5’s

--- a/Contact_info.html
+++ b/Contact_info.html
@@ -62,6 +62,6 @@ layout: contact_sidebar
       <input type="text" class="form-control" id="inputZip">
     </div>
   </div>
-  <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
+  <a class="btn btn-primary" href="Yourself_info.html" role="button">Next</a>
   <a class="btn btn-outline-primary" href="index.html" role="button">Back</a>
 </form>
