--- a/Home_info.html
+++ b/Home_info.html
@@ -49,6 +49,6 @@ layout: contact_sidebar
           <input type="text" class="form-control" id="inputChildren" placeholder=" " aria-describedby="childrenHelpBlock">
         </div>
       </div>
-    <a class="btn btn-primary" href="#" role="button">Next</a>
-    <a class="btn btn-outline-primary" href="Contact.html" role="button">Back</a>
+    <a class="btn btn-primary" href="Animal_info.html" role="button">Next</a>
+    <a class="btn btn-outline-primary" href="Availability_info.html" role="button">Back</a>
   </form>
