--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@ layout: contact_sidebar
 <ul>
     <li>(add later)</li>
 </ul>
-<a class="btn btn-primary" href="Contact.html" role="button">Start application</a>
+<a class="btn btn-primary" href="Contact_info.html" role="button">Start application</a>
