Updated button names

--- a/Help_info.html
+++ b/Help_info.html
@@ -4,6 +4,6 @@ layout: contact_sidebar
 
 <h2>Tell us how we can help you foster</h2>
 <form>
-  <a class="btn btn-primary" href="Confirmation.html" role="button">Next</a>
+  <a class="btn btn-primary" href="Confirmation.html" role="button">Submit application</a>
   <a class="btn btn-outline-primary" href="Animal_info.html" role="button">Back</a>
 </form>
