Added refined content to start page and updated h4 css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: contact_sidebar
 ---
 
 <h2>Apply to become a foster care provider</h2>
-<p>We’re so happy you’re interested in fostering for the Austin Animal Center! Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
+<p>We’re so happy you’re interested in fostering for the Austin Animal Center! Applying to become a Foster Care Provider is the first step in the Fostering Process. Your answers to these questions will help us set you up for a successful fostering experience. Contact us with questions you have about filling out this application. Thank you - from all of us and all our dogs and cats!</p>
 <h3>Types of animals needing foster</h3>
 <ul>
     <li>Medium to large dogs</li>
@@ -13,7 +13,30 @@ layout: contact_sidebar
     <li>Dogs and cats recovering from an illness, injury or surgery</li>
 </ul>
 <h3>The foster process</h3>
-<ul>
-    <li>(add later)</li>
-</ul>
+<p>Before you start the application, verify with your veterinarian that your pets have current rabies vaccinations and discuss any other recommended vaccines.</p>
+<h4>1. Apply to become a Foster Care Provider</h4>
+    <ul>
+        <li>Answer the following questions about yourself, availability, home, and pets.</li>
+        <li>You may receive a call or email from us with questions about your application.</li>
+        <li>If you are approved, you will receive an email from us about next steps.</li>
+    </ul>
+<h4>2. Sign and return the foster agreement attached to your approval email</h4>
+<h4>3. Find an animal you would like to foster</h4>
+    <ul>
+        <li>Sign up for GivePulse, the system we use to send you emails about available animals.</li>
+        <li>Let us know when you see an animal you want to foster!</li>
+        <li>We will contact you by phone or email with any questions, the animal’s availability, and a pick up time!</li>
+    </ul>
+<h4>4. Take home your foster animal from the Austin Animal Center!</h4>
+<h4>5. Attend a foster program orientation within 3 months of approval</h4>
+    <ul>
+        <li>While you can get a foster animal before completing this step, you will need to attend a foster program orientation within three months of becoming approved to foster. You will learn about shelter operations and the important role that the foster program and foster care providers play.</li>
+    </ul>
+<h4>6. Care for your foster animal and help find a forever home</h4>
+    <ul>
+        <li>Attend to basic daily care.</li>
+        <li>Bring your animal to the Austin Animal Center for any medical care covered by us.</li>
+        <li>Promote your foster animal online and around town!</li>
+        <li>Review applications of potential adopters, set up meetings with them, and decide which home would be the best fit for the animal(s) in your care.</li>
+    </ul>
 <a class="btn btn-primary" href="Contact_info.html" role="button">Start application</a>
