--- a/Home_info.html
+++ b/Home_info.html
@@ -2,7 +2,7 @@
 layout: contact_sidebar
 ---
 
-<h2>Your Home</h2>
+<h2>Tell us about your home</h2>
 <form>
     <div>
         <h5>Do you own your home?</h5>
@@ -20,13 +20,74 @@ layout: contact_sidebar
         </div>
     </div>
     <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputHomeowner">(if no) Have you verified with the homeowner that you are allowed to have pets in the home?</label>
-        <small id="homeownerHelpBlock" class="form-text text-muted">
-            Lack of permission does not disqualify you. If you need help getting permission from the homeowner, let us know.
-        </small>
+      <div class="form-group">
+        <label for="inputHomeowner">(If no, disclaimer) You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</label>
         <input type="text" class="form-control" id="inputHomeowner" placeholder=" " aria-describedby="homeownerHelpBlock">
       </div>
+    </div>
+    <div>
+        <h5>Could your foster animal live indoors?</h5>
+        <small id="could_indoorsHelpBlock" class="form-text text-muted">
+            Foster animals need to live primarily indoors for their health and safety.
+        </small>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="could_indoorsRadios" id="could_indoorsRadios1" value="Yes" checked>
+            <label class="form-check-label" for="could_indoorsRadios1">
+            Yes
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="could_indoorsRadios" id="could_indoorsRadios2" value="No">
+            <label class="form-check-label" for="could_indoorsRadios2">
+            No
+            </label>
+        </div>
+    </div>
+    <div>
+        <!-- If no for above, include this whole div section -->
+        <h5>(if no) Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
+        <ul>
+            <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
+            <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
+            <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
+        </ul>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="inputCould_indoors">(if no) If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</label>
+                <textarea class="form-control" id="inputCould_indoors" rows="3" ></textarea>
+            </div>
+        </div>
+    </div>
+    <h5>(If yes) Are you planning to have your foster animal live indoors?</h5>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios1" value="Yes" checked>
+        <label class="form-check-label" for="can_indoorsRadios1">
+        Yes
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios2" value="No">
+        <label class="form-check-label" for="can_indoorsRadios2">
+        No
+        </label>
+    </div>
+    <div>
+        <!-- If no or maybe for above, include this whole div section -->
+        <h5>(If no or maybe) Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
+        <ul>
+            <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
+            <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
+            <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
+        </ul>
+        <div class="form-row">
+            <div class="form-group">
+                <label for="inputCan_indoors">(if no or maybe) If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</label>
+                <textarea class="form-control" id="inputCan_indoors" rows="3" ></textarea>
+            </div>
+        </div>
+    </div>
+    <div>
+        {% include add_explanation.html %}
     </div>
     <div>
         <h5>Do any children under 18 living in your home?</h5>
@@ -44,9 +105,9 @@ layout: contact_sidebar
         </div>
     </div>
     <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputChildren">(If yes) Please list the ages of all children under 18 living in your home.</label>
-          <input type="text" class="form-control" id="inputChildren" placeholder=" " aria-describedby="childrenHelpBlock">
+        <div class="form-group">
+            <label for="inputChildren">(If yes) Please list the ages of all children under 18 living in your home.</label>
+            <textarea class="form-control" id="inputChildren" rows="3" ></textarea>
         </div>
     </div>
     <a class="btn btn-primary" href="Animal_info.html" role="button">Next</a>
