--- a/Animal_info.html
+++ b/Animal_info.html
@@ -4,6 +4,263 @@ layout: contact_sidebar
 
 <h2>Tell us about your animals</h2>
 <form>
+  <div>
+    <h5>Do you currently have any animals in your home?</h5>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="animalsRadios" id="animalsRadios1" value="Yes" checked>
+        <label class="form-check-label" for="animalsRadios1">
+        Yes
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="animalsRadios" id="animalsRadios2" value="No">
+        <label class="form-check-label" for="animalsRadios2">
+        No
+        </label>
+    </div>
+  </div>
+  <div>
+      <h5>(if yes to question 1) Do any dogs live in your home?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dogsRadios" id="dogsRadios1" value="Yes" checked>
+          <label class="form-check-label" for="dogsRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dogsRadios" id="dogsRadios2" value="No">
+          <label class="form-check-label" for="dogsRadios2">
+          No
+          </label>
+      </div>
+  </div>
+  <div class="animal-info">
+      <h5>(if yes to dogs) Please fill in the information for Dog 1.</h5>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="inputDog_name">Your dog's name</label>
+          <input type="text" class="form-control" id="inputDog_name" placeholder=" " aria-describedby="Dog_nameHelpBlock">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="inputDog_age">Your dog's age</label>
+          <input type="text" class="form-control" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
+        </div>
+      </div>
+      <h5>Your dog's weight</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Dog_weightRadios" id="Dog_weightRadios1" value="Small (Under 35 lbs)" checked>
+          <label class="form-check-label" for="Dog_weightRadios1">
+          Small (Under 35 lbs)
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Dog_weightRadios" id="Dog_weightRadios2" value="Medium (36-65 lbs)">
+          <label class="form-check-label" for="Dog_weightRadios2">
+          Medium (36-65 lbs)
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Dog_weightRadios" id="Dog_weightRadios2" value="Large (65 lbs and higher)">
+          <label class="form-check-label" for="Dog_weightRadios2">
+          Large (65 lbs and higher)
+          </label>
+      </div>
+      <h5>Your dog's sex</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Dog_sexRadios" id="Dog_sexRadios1" value="Female" checked>
+          <label class="form-check-label" for="Dog_sexRadios1">
+          Female
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Dog_sexRadios" id="Dog_sexRadios2" value="Male">
+          <label class="form-check-label" for="Dog_sexRadios2">
+          Male
+          </label>
+      </div>
+  </div>
+  <div>
+      <a class="btn btn-primary" href="#" role="button">+</a>
+      <span>Add another dog</span>
+      <small id="add_dogHelpInline" class="text-muted">
+          Optional
+      </small>
+  </div>
+  <div>
+      <h5>(if yes to dogs) Are all of your dogs spayed or neutered?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_spayedRadios" id="dog_spayedRadios1" value="Yes" checked>
+          <label class="form-check-label" for="dog_spayedRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_spayedRadios" id="dog_spayedRadios2" value="No">
+          <label class="form-check-label" for="dog_spayedRadios2">
+          No
+          </label>
+      </div>
+  </div>
+  <div>
+      {% include add_explanation.html %}
+  </div>
+  <div>
+      <h5>(if yes to dogs) Do all of the above dogs have current rabies vaccinations?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios1" value="Yes" checked>
+          <label class="form-check-label" for="dog_rabiesRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="dog_rabiesRadios" id="dog_rabiesRadios2" value="No">
+          <label class="form-check-label" for="dog_rabiesRadios2">
+          No
+          </label>
+      </div>
+      <div>
+        <span>(if no, disclaimer) By law in the State of Texas, all dogs must be vaccinated for rabies. You may still continue the application, but please vaccinate your dogs before bringing home a foster animal.</span>
+      </div>
+  </div>
+  <div>
+      {% include add_explanation.html %}
+  </div>
+  <div>
+      <h5>(if yes to question 1) Do any cats live in your home?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="catsRadios" id="catsRadios1" value="Yes" checked>
+          <label class="form-check-label" for="catsRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="catsRadios" id="catsRadios2" value="No">
+          <label class="form-check-label" for="catsRadios2">
+          No
+          </label>
+      </div>
+  </div>
+  <div class="animal-info">
+      <h5>(if yes to cats) Please fill in the information for Cat 1.</h5>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="inputCat_name">Your cat's name</label>
+          <input type="text" class="form-control" id="inputCat_name" placeholder=" " aria-describedby="Cat_nameHelpBlock">
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="form-group">
+          <label for="inputCat_age">Your cat's age</label>
+          <input type="text" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
+        </div>
+      </div>
+      <h5>Your cat's sex</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios1" value="Female" checked>
+          <label class="form-check-label" for="Cat_sexRadios1">
+          Female
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="Cat_sexRadios" id="Cat_sexRadios2" value="Male">
+          <label class="form-check-label" for="Cat_sexRadios2">
+          Male
+          </label>
+      </div>
+  </div>
+  <div>
+      <a class="btn btn-primary" href="#" role="button">+</a>
+      <span>Add another cat</span>
+      <small id="add_CatHelpInline" class="text-muted">
+          Optional
+      </small>
+  </div>
+  <div>
+    <h5>(if yes to cats) Are all of your cats spayed or neutered?</h5>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios1" value="Yes" checked>
+        <label class="form-check-label" for="cat_spayedRadios1">
+        Yes
+        </label>
+    </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="cat_spayedRadios" id="cat_spayedRadios2" value="No">
+        <label class="form-check-label" for="cat_spayedRadios2">
+        No
+        </label>
+    </div>
+  </div>
+  <div>
+      {% include add_explanation.html %}
+  </div>
+  <div>
+      <h5>(if yes to cats) Do all of the above cats have current rabies vaccinations?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="cat_rabiesRadios" id="cat_rabiesRadios1" value="Yes" checked>
+          <label class="form-check-label" for="cat_rabiesRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="cat_rabiesRadios" id="cat_rabiesRadios2" value="No">
+          <label class="form-check-label" for="cat_rabiesRadios2">
+          No
+          </label>
+      </div>
+      <div>
+        <span>(if no, disclaimer) By law in the State of Texas, all cats must be vaccinated for rabies. You may still continue the application, but please vaccinate your cats before bringing home a foster animal.</span>
+      </div>
+  </div>
+  <div>
+      {% include add_explanation.html %}
+  </div>
+  <div>
+      <h5>(if yes to question 1) Do any other types of animals live in your home?</h5>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="other_animalsRadios" id="other_animalsRadios1" value="Yes" checked>
+          <label class="form-check-label" for="other_animalsRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="other_animalsRadios" id="other_animalsRadios2" value="No">
+          <label class="form-check-label" for="other_animalsRadios2">
+          No
+          </label>
+      </div>
+  </div>
+  <div class="form-row">
+      <div class="form-group">
+          <label for="inputAnimal_types">(if yes to other animals) Please list your other types of animals.</label>
+          <textarea class="form-control" id="inputAnimal_types" rows="3" ></textarea>
+      </div>
+  </div>
+  <div>
+      <h5>(if yes to 1st animal question) Inside your home, are you able to separate your foster animals from your own animals if needed?</h5>
+      <small id="separateHelpBlock" class="form-text text-muted">
+          If the foster animal has new vaccinations or becomes ill, they and your animals should be separated for each other's safety and well-being.
+      </small>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios1" value="Yes" checked>
+          <label class="form-check-label" for="separateRadios1">
+          Yes
+          </label>
+      </div>
+      <div class="form-check">
+          <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios2" value="No">
+          <label class="form-check-label" for="separateRadios2">
+          No
+          </label>
+      </div>
+      <div>
+        <span>(If no or maybe, disclaimer) It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
+      </div>
+  </div>
+  <div>
+      {% include add_explanation.html %}
+  </div>
   <a class="btn btn-primary" href="Help_info.html" role="button">Next</a>
   <a class="btn btn-outline-primary" href="Home_info.html" role="button">Back</a>
 </form>
