Added refined 'help info' copy

--- a/Help_info.html
+++ b/Help_info.html
@@ -3,6 +3,18 @@ layout: contact_sidebar
 ---
 
 <h2>Tell us how we can help you foster</h2>
+<div class="form-row">
+    <div class="form-group">
+        <label for="inputHelp_foster">We may be able to offer some supplies for your foster animal if you need them, based on what we have available. Would you like the Austin Animal Center to see if we can help you with supplies for your foster animal (crates, litter, etc.)?</label>
+        <textarea class="form-control" id="inputHelp_foster" rows="3" ></textarea>
+    </div>
+</div>
+<div class="form-row">
+    <div class="form-group">
+        <label for="inputAnything_else">Is there anything else you would like us to know?</label>
+        <textarea class="form-control" id="inputAnything_else" rows="3" ></textarea>
+    </div>
+</div>
 <form>
   <a class="btn btn-primary" href="Confirmation.html" role="button">Submit application</a>
   <a class="btn btn-outline-primary" href="Animal_info.html" role="button">Back</a>
