Added refined 'confirmation' copy and updated 'help info' copy

--- a/Help_info.html
+++ b/Help_info.html
@@ -5,7 +5,7 @@ layout: contact_sidebar
 <h2>Tell us how we can help you foster</h2>
 <div class="form-row">
     <div class="form-group">
-        <label for="inputHelp_foster">We may be able to offer some supplies for your foster animal if you need them, based on what we have available. Would you like the Austin Animal Center to see if we can help you with supplies for your foster animal (crates, litter, etc.)?</label>
+        <label for="inputHelp_foster">Based on what we have available, we may be able to offer some supplies for your foster animal if you need them. Would you like the Austin Animal Center to see if we can help you with supplies for your foster animal (crates, litter, etc.)?</label>
         <textarea class="form-control" id="inputHelp_foster" rows="3" ></textarea>
     </div>
 </div>
