Swapped in 'add explanation' component

--- a/Availability_info.html
+++ b/Availability_info.html
@@ -47,11 +47,7 @@ layout: contact_sidebar
         </div>
     </div>
     <div>
-        <a class="btn btn-primary" href="#" role="button">+</a>
-        <span>Add an explanation</span>
-        <small id="add_explanationHelpInline" class="text-muted">
-          Optional
-        </small>
+        {% include add_explanation.html %}
     </div>
     <div>
         <h5>Can you meet with potential adopters to show them your foster animal?</h5>
@@ -72,11 +68,7 @@ layout: contact_sidebar
         </div>
     </div>
     <div>
-        <a class="btn btn-primary" href="#" role="button">+</a>
-        <span>Add an explanation</span>
-        <small id="add_explanationHelpInline" class="text-muted">
-          Optional
-        </small>
+        {% include add_explanation.html %}
     </div>
   <a class="btn btn-primary" href="Home_info.html" role="button">Next</a>
   <a class="btn btn-outline-primary" href="Yourself_info.html" role="button">Back</a>
