--- a/Yourself_info.html
+++ b/Yourself_info.html
@@ -37,11 +37,7 @@ layout: contact_sidebar
       </div>
     </div>
     <div>
-      <a class="btn btn-primary" href="#" role="button">+</a>
-      <span>Add an explanation</span>
-      <small id="add_explanationHelpInline" class="text-muted">
-        Optional
-      </small>
+        {% include add_explanation.html %}
     </div>
     <div>
       <h5>We provide all medications at no cost to you. If necessary, can you come to the Austin Animal Center once a month to pick up heartworm and parasite preventative medications?</h5>
@@ -62,11 +58,7 @@ layout: contact_sidebar
       </div>
     </div>
     <div>
-      <a class="btn btn-primary" href="#" role="button">+</a>
-      <span>Add an explanation</span>
-      <small id="add_explanationHelpInline" class="text-muted">
-        Optional
-      </small>
+        {% include add_explanation.html %}
     </div>
     <div>
       <h5>Are you currently fostering for another humane organization?</h5>
@@ -87,11 +79,7 @@ layout: contact_sidebar
       </div>
     </div>
     <div>
-      <a class="btn btn-primary" href="#" role="button">+</a>
-      <span>Add an explanation</span>
-      <small id="add_explanationHelpInline" class="text-muted">
-        Optional
-      </small>
+        {% include add_explanation.html %}
     </div>
     <div>
       <h5>Do you have experience with any of the following:</h5>
@@ -118,11 +106,7 @@ layout: contact_sidebar
       </div>
     </div>
     <div>
-      <a class="btn btn-primary" href="#" role="button">+</a>
-      <span>Add an explanation</span>
-      <small id="add_explanationHelpInline" class="text-muted">
-        Optional
-      </small>
+        {% include add_explanation.html %}
     </div>
     <div>
       <h5>Is there already an Austin Animal Center animal you are interested in fostering?</h5>
