Added progress bar to pages

--- a/Contact_info.html
+++ b/Contact_info.html
@@ -2,6 +2,9 @@
 layout: contact_sidebar
 ---
 
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 14.29%;" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
+</div>
 <h2>Tell us how to contact you</h2>
 <form>
   <div class="form-row">
