--- a/Yourself_info.html
+++ b/Yourself_info.html
@@ -2,6 +2,10 @@
 layout: contact_sidebar
 ---
 
+<div class="progress">
+  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Contact_info.html">1</a></div>
+  <div class="progress-bar" role="progressbar" style="width: 14.29%" aria-valuenow="14.29" aria-valuemin="0" aria-valuemax="100"><a href="Yourself_info.html">2</a></div>
+</div>
 <h2>Tell us about yourself</h2>
 <form>
     <div>
