--- a/Home_info.html
+++ b/Home_info.html
@@ -31,40 +31,7 @@ layout: contact_sidebar
         <input type="text" class="form-control" id="inputHomeowner" placeholder=" " aria-describedby="homeownerHelpBlock">
       </div>
     </div>
-    <div>
-        <h5>Could your foster animal live indoors?</h5>
-        <small id="could_indoorsHelpBlock" class="form-text text-muted">
-            Foster animals need to live primarily indoors for their health and safety.
-        </small>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="could_indoorsRadios" id="could_indoorsRadios1" value="Yes" checked>
-            <label class="form-check-label" for="could_indoorsRadios1">
-            Yes
-            </label>
-        </div>
-        <div class="form-check">
-            <input class="form-check-input" type="radio" name="could_indoorsRadios" id="could_indoorsRadios2" value="No">
-            <label class="form-check-label" for="could_indoorsRadios2">
-            No
-            </label>
-        </div>
-    </div>
-    <div>
-        <!-- If no for above, include this whole div section -->
-        <h5>(if no) Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
-        <ul>
-            <li>Kittens and cats in foster care should only be kept indoors, because there’s a high risk of them running away.</li>
-            <li>Puppies (under 5 months of age) in foster care should be kept primarily indoors, but can go outside for supervised potty breaks, play time, and exercise.</li>
-            <li>Dogs (over 5 months of age) in foster care have the same rule as puppies, and additionally can go outside for short periods of unsupervised breaks as long as you have ensured that your yard is secure.</li>
-        </ul>
-        <div class="form-row">
-            <div class="form-group">
-                <label for="inputCould_indoors">(if no) If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</label>
-                <textarea class="form-control" id="inputCould_indoors" rows="3" ></textarea>
-            </div>
-        </div>
-    </div>
-    <h5>(If yes) Are you planning to have your foster animal live indoors?</h5>
+    <h5>Are you planning to have your foster animal live indoors?</h5>
     <div class="form-check">
         <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios1" value="Yes" checked>
         <label class="form-check-label" for="can_indoorsRadios1">
