added maybe radio

--- a/Home_info.html
+++ b/Home_info.html
@@ -44,6 +44,12 @@ layout: contact_sidebar
         No
         </label>
     </div>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="can_indoorsRadios" id="can_indoorsRadios3" value="Maybe">
+        <label class="form-check-label" for="can_indoorsRadios3">
+        Maybe
+        </label>
+    </div>
     <div>
         <!-- If no or maybe for above, include this whole div section -->
         <h5>(If no or maybe) Foster animals need to reside indoors. Here are the expectations for housing foster animals:</h5>
