Updated input types

--- a/Animal_info.html
+++ b/Animal_info.html
@@ -52,7 +52,7 @@ layout: contact_sidebar
       <div class="form-row">
         <div class="form-group">
           <label for="inputDog_age">Your dog's age</label>
-          <input type="text" class="form-control" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
+          <input type="number" class="form-control" id="inputDog_age" placeholder=" " aria-describedby="Dog_ageHelpBlock">
         </div>
       </div>
       <h5>Your dog's weight</h5>
@@ -160,7 +160,7 @@ layout: contact_sidebar
       <div class="form-row">
         <div class="form-group">
           <label for="inputCat_age">Your cat's age</label>
-          <input type="text" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
+          <input type="number" class="form-control" id="inputCat_age" placeholder=" " aria-describedby="Cat_ageHelpBlock">
         </div>
       </div>
       <h5>Your cat's sex</h5>
@@ -261,6 +261,12 @@ layout: contact_sidebar
           No
           </label>
       </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="separateRadios" id="separateRadios3" value="Maybe">
+        <label class="form-check-label" for="separateRadios3">
+        Maybe
+        </label>
+    </div>
       <div>
         <span>(If no or maybe, disclaimer) It is important that you have a plan in place to separate foster pets from your pets for their safety and well-being. It can be as simple as keeping them in separate rooms, crates, or using a baby gate as a barrier. Before taking home a foster animal, please consider your options and determine how you could separate the animal if needed.</span>
       </div>
