--- a/Contact_info.html
+++ b/Contact_info.html
@@ -31,7 +31,7 @@ layout: contact_sidebar
         <small id="phoneHelpBlock" class="form-text text-muted">
             Enter a 10 digit phone number
         </small>
-        <input type="text" class="form-control" id="inputPhone" placeholder="_ _ _ - _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
+        <input type="tel" class="form-control" id="inputPhone" placeholder="_ _ _ - _ _ _ - _ _ _ _" aria-describedby="phoneHelpBlock">
       </div>
   </div>
   <div class="form-row">
@@ -62,7 +62,7 @@ layout: contact_sidebar
   <div class="form-row">
     <div class="form-group col-md-2">
       <label for="inputZip">Zipcode</label>
-      <input type="text" class="form-control" id="inputZip">
+      <input type="number" class="form-control" id="inputZip">
     </div>
   </div>
   <a class="btn btn-primary" href="Yourself_info.html" role="button">Next</a>
