added optional text to help and home

--- a/Help_info.html
+++ b/Help_info.html
@@ -14,12 +14,18 @@ layout: contact_sidebar
 <div class="form-row">
     <div class="form-group">
         <label for="inputHelp_foster">Based on what we have available, we may be able to offer some supplies for your foster animal if you need them. Would you like the Austin Animal Center to see if we can help you with supplies for your foster animal (crates, litter, etc.)?</label>
+        <small id="Help_fosterHelpInline" class="text-muted">
+            Optional
+        </small>
         <textarea class="form-control" id="inputHelp_foster" rows="3" ></textarea>
     </div>
 </div>
 <div class="form-row">
     <div class="form-group">
         <label for="inputAnything_else">Is there anything else you would like us to know?</label>
+        <small id="Anything_elseHelpInline" class="text-muted">
+            Optional
+        </small>
         <textarea class="form-control" id="inputAnything_else" rows="3" ></textarea>
     </div>
 </div>
