--- a/Home_info.html
+++ b/Home_info.html
@@ -28,6 +28,9 @@ layout: contact_sidebar
     <div class="form-row">
       <div class="form-group">
         <label for="inputHomeowner">(If no, disclaimer) You may want to make sure you have permission from the homeowner or property management that you are allowed to have pets in the home, as well as identify if there are breed or weight restrictions for dogs. Not having permission does not disqualify you from fostering. If you need help getting permission from the homeowner or property management, let us know.</label>
+        <small id="HomeownerHelpInline" class="text-muted">
+            Optional
+        </small>
         <input type="text" class="form-control" id="inputHomeowner" placeholder=" " aria-describedby="homeownerHelpBlock">
       </div>
     </div>
@@ -61,6 +64,9 @@ layout: contact_sidebar
         <div class="form-row">
             <div class="form-group">
                 <label for="inputCan_indoors">(if no or maybe) If you don't think you'll be able to have your foster animal live indoors, please let us know and we may be able to help you figure out a solution.</label>
+                <small id="Can_indoorsHelpInline" class="text-muted">
+                    Optional
+                </small>
                 <textarea class="form-control" id="inputCan_indoors" rows="3" ></textarea>
             </div>
         </div>
