--- a/Yourself_info.html
+++ b/Yourself_info.html
@@ -117,13 +117,13 @@ layout: contact_sidebar
     <div>
         {% include add_explanation.html %}
     </div>
-    <div>
+    <div class="js-exisiting-animal">
       <h5>Is there already an Austin Animal Center animal you are interested in fostering?</h5>
       <small id="animal_interestedHelpBlock" class="form-text text-muted">
         For example, if you saw one on a Facebook post. This does not guarantee that the animal will be placed with you, but we will take you into consideration.
       </small>
       <div class="form-check">
-          <input class="form-check-input" type="radio" name="animal_interestedRadios" id="animal_interestedRadios1" value="Yes" checked>
+          <input class="form-check-input" type="radio" name="animal_interestedRadios" id="animal_interestedRadios1" value="Yes">
           <label class="form-check-label" for="animal_interestedRadios1">
           Yes
           </label>
@@ -135,11 +135,11 @@ layout: contact_sidebar
           </label>
       </div>
   </div>
-  <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputAnimal_interested">(If yes) Which animal is it?</label>
-        <input type="text" class="form-control" id="inputAnimal_interested" placeholder=" " aria-describedby="Animal_interestedHelpBlock">
-      </div>
+  <div class="form-row d-none js-exisiting-animal-followup">
+    <div class="form-group col-md-6">
+      <label for="inputAnimal_interested">Which animal is it?</label>
+      <input type="text" class="form-control" id="inputAnimal_interested" placeholder=" " aria-describedby="Animal_interestedHelpBlock">
+    </div>
   </div>
   <a class="btn btn-primary" href="Availability_info.html" role="button">Next</a>
   <a class="btn btn-outline-primary" href="Contact_info.html" role="button">Back</a>
