Changed 'add explanation' text, minor edits

--- a/Yourself_info.html
+++ b/Yourself_info.html
@@ -41,6 +41,7 @@ layout: contact_sidebar
           No
           </label>
           <div class="alert alert-danger d-none js-transportation-alert" role="alert">
+            <h2>Sorry</h2>
             <p>Unfortunately, we cannot accept your application at this time. Foster animals must receive veterinary care immediately especially in the event of an emergency, or they could experience permanent damage, trauma, or worse, could die. Please reapply if you get reliable transportation. Thank you for helping us ensure the safety of our animals, and if you would like to help in other ways, please visit <a href="http://www.austintexas.gov/department/volunteer">our volunteer page</a>.</p>
           </div>
       </div>
@@ -134,7 +135,7 @@ layout: contact_sidebar
           No
           </label>
       </div>
-  </div>
+    </div>
   <div class="form-row d-none js-exisiting-animal-followup">
     <div class="form-group col-md-6">
       <label for="inputAnimal_interested">Which animal is it?</label>
